# io-backends

./: .gitignore  Cargo.toml  README.md  bindings.h  build.rs
jbackend-aio/: Cargo.toml
jbackend-aio/src/: data.rs
jbackend-io-uring/: Cargo.toml
jbackend-io-uring/src/: data.rs  lib.rs  uring.rs
jbackend-mmap/: Cargo.toml
jbackend-mmap/src/: data.rs  lib.rs  mmap.rs
jbackend-posix/: Cargo.toml
jbackend-posix/src/: lib.rs  posix.rs
src/: common.rs  gbool.rs  lib.rs  posix.rs  test_facility.rs
src/common/: adapter.rs  backend.rs  error.rs  init.rs  io_handler.rs  util_c.rs
src/posix/: posix.rs
src/test_facility/: filesystem.rs  workflow_test.rs  writes.rs
tests/: posix_tests.rs
tests/common/: mod.rs
