[workspace]
members = [
    "jbackend-posix",
    "jbackend-aio",
    "jbackend-mmap",
    "jbackend-io-uring",
]
default-members = [
    "jbackend-posix",
    "jbackend-aio",
    "jbackend-mmap",
    "jbackend-io-uring",
]

[workspace.package]
version = "0.1.0"
authors = ["Konrad Ueltzen"]

[package]
name = "io-backends"
authors = ["Konrad Ueltzen"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["posix"]
posix = []
aio = []
mmap = []
uring = []


[build-dependencies]
bindgen = "0.69.2"

[dependencies]
assert_fs = "1.1.1"
env_logger = "0.11.1"
log = "0.4.20"
log4rs = { version = "1.3.0", features = ["file_appender"] }
hostname = "^0.3"
