[package]
name = "jbackend-posix-io"
description = "A JULEA backend using the POSIX I/O interface."
version.workspace = true
authors.workspace = true

edition = "2021"
[dependencies]
io-backends = { path = ".." }
log = "0.4.20"
log4rs = { version = "1.3.0", features = ["file_appender"] }

[lib]
crate-type = ["cdylib"]
